# mysql

./: .drone.star  CMakeLists.txt
.github/workflows/: build-docker-images.yml
cmake/: FindBoostMysqlStandaloneAsio.cmake  config.cmake.in
example/: CMakeLists.txt  db_setup_orders.sql
example/http_server/: http_server.cpp  json_body.hpp
include/boost/mysql/: asio_streams.hpp  client_errc.hpp  collation.hpp  connection.hpp  connection_params.hpp  connection_pool.hpp  errc.hpp  error.hpp  field_type.hpp  metadata.hpp  prepared_statement.hpp  resultset.hpp  row.hpp  string_view.hpp  value.hpp  variant.hpp
include/boost/mysql/detail/: config.hpp
include/boost/mysql/detail/auxiliar/: optional.hpp
include/boost/mysql/detail/network_algorithms/: close_connection.hpp  close_statement.hpp  connect.hpp  execute_generic.hpp  execute_query.hpp  execute_statement.hpp  handshake.hpp  prepare_statement.hpp  quit_connection.hpp  read_row.hpp  reset_session.hpp
include/boost/mysql/detail/network_algorithms/impl/: close_connection.hpp  close_statement.hpp  connect.hpp  execute_generic.hpp  execute_query.hpp  execute_statement.hpp  handshake.hpp  prepare_statement.hpp  quit_connection.hpp  read_row.hpp  reset_session.hpp
include/boost/mysql/detail/protocol/: channel.hpp  common_messages.hpp
include/boost/mysql/detail/protocol/impl/: channel.hpp
include/boost/mysql/impl/: connection.hpp  connection_pool.hpp  error_categories.hpp  prepared_statement.hpp  resultset.hpp
include/boost/mysql/impl/internal/error/: server_error_to_string.ipp
test/: CMakeLists.txt
test/unit/test/detail/: datetime.cpp
tools/: build_all.py  ci.py  error_codes.csv  file_headers.py
tools/docker/: build-gcc13.dockerfile  mariadb.dockerfile
tools/scripts/: build_unix_local.sh
